--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
+body {
+	font-family: 'palatino linotype', Verdana, sans-serif;
+	margin: 0;
+	background-color: rgb(3, 77, 3);
+}
+
 h1 {
-  background-color: green;
-  color: yellow;
+  background-color: rgb(3, 77, 3);
+  color: gold;
+  text-align: center;
+  border-style: outset;
 }
 
 a {
-  background-color: red;
+  background-color: rgb(3, 77, 3);
   color: white;
+  text-decoration: none;
+  border-style: outset;
 }
 
 p {
   background-color: yellow;
-  color: green;
+  color: rgb(3, 77, 3);
 }
