Created an assets folder containing a css folder and an images folder. Uploaded some pictures I have taken and moved style.css to the assets/css folder. Made changes to code to reflect the new file paths. Added an image to index.html and placed text to its left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,17 @@ a {
   text-decoration: none;
   border-style: outset;
 }
+.float-left {
+  width: 50%;
+  float: left;
+}
+
+.float-right {
+  width: 50%;
+  float: right;
+}
 
 p {
-  background-color: yellow;
-  color: rgb(3, 77, 3);
+  font-style: "Times New Roman";
+  color: white;
 }
