--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: 'palatino linotype', Verdana, sans-serif;
-	margin: 0px;
+	margin-left: 5px;
   padding: 0px;
 	background-color: whitesmoke;
 }
@@ -25,7 +25,7 @@ a {
   background-color: rgb(3, 77, 3);
   color: white;
   text-decoration: none;
-  font-size: 60%;
+  font-size: 50%;
   margin: 1rem;
 }
 
