--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,13 +86,13 @@ img {
   margin-right: auto;
   margin-top: 5px;
  }
-
+/*fix footer to bottom of page*/
  .fixed-bottom {
   position: fixed;
   bottom: 0;
   right: 0;
  }
- 
+ /*style footer to same as rest of page*/
  footer {
 	  background-color: rgb(3, 77, 3);
 	  padding: 1em;
@@ -101,7 +101,7 @@ img {
     height: 3vh;
     color: gold;
  }
-
+/*set page response to smaller screen size*/
  @media screen and (max-width: 600px) {
 	.fixed-bottom {
 		position: relative;
