--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,8 +26,10 @@ h1 {
 }
 /*style h2 element*/
 h2 {
-  color: rgb(3, 77, 3);
+  background-color: rgb(3, 77, 3);
+  color: gold;
   margin-top: 6vh;
+  border: 2px solid rgb(3, 77, 3)
 }
 /*style h3 element*/
 h3 {
@@ -66,7 +68,7 @@ a:hover {
 /*style paragraphs*/
 p {
   color: rgb(3, 77, 3);
-  font-size: 1.1rem;
+  font-size: 1.15rem;
   margin-left: 3vw;
 }
 /*set organised list to match style of rest of document*/
@@ -88,6 +90,47 @@ img {
   margin-right: auto;
   margin-top: 5px;
  }
+
+ fieldset {
+	border: none;
+	margin-top: 10px;
+  color: rgb(3, 77, 3);
+}
+
+legend {
+	font-size: large;
+	font-weight: 600;
+	margin: 20px 0 10px 0;
+}
+
+input[type=submit] {
+	margin-top: 10px;
+	margin-left: 1rem;
+	padding: 1rem;
+	background-color: whitesmoke;
+	color: rgb(3, 77, 3);
+	border: 1px solid rgb(3, 77, 3);
+	border-radius: 5px;
+}
+
+input[type=reset] {
+	margin-top: 10px;
+	margin-left: 1rem;
+	padding: 1rem;
+	background-color: whitesmoke;
+	color: rgb(3, 77, 3);
+	border: 1px solid rgb(3, 77, 3);
+	border-radius: 5px;
+}
+	
+form {
+	width: 75vw;
+	padding: 0;
+	border-radius: 5px;
+	margin-bottom: 5vw;
+	background-color: whitesmoke;
+}
+
 /*fix footer to bottom of page*/
  .fixed-bottom {
   position: fixed;
