--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,16 +29,14 @@ h1 {
   width: 100%;
   display: block;
   border: none;
-  max-width: 100%;
-  margin: 0;
+  margin: 6vh 0 0 0;
   padding: 0;
 }
 /*style h2 element*/
 h2 {
   background-color: rgb(3, 77, 3);
   color: gold;
-  margin-top: 6vh;
-  border: 2px solid rgb(3, 77, 3)
+  margin: 0;
 }
 /*style h3 element*/
 h3 {
