--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,9 +52,8 @@ h1:hover {
 }
 /*set style for main image*/
 #main-image {
-  height: 600px;
-  width: 100vw;
-  background-image: url('assets/images/loughallen.jpg') no-repeat center center;
+  width: 100%;
+  height: 800px;
 }
 /*style h2 element*/
 h2 {
@@ -99,7 +98,7 @@ ul{
   list-style-type:none;
 }
 /*set border and style rules for images*/
-img {
+article img {
   border: 2px solid rgb(3, 77, 3);
   max-width: 98%;
   display: block;
