again tried to set background image with no success

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,7 @@ h1:hover {
 #main-image {
   width: 100%;
   height: 800px;
+  background-image: url("/assets/images/loughallen2.jpg") no-repeat center center;
 }
 /*style h2 element*/
 h2 {
