--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,8 +29,9 @@ nav a:hover {
 }
 /*Set size of header*/
 header {
-  height: 5vh;
+  height: 75px;
   width: 100%;
+  background-color: whitesmoke;
 }
 /*fix header to top of document*/
 .fixed-top {
@@ -50,11 +51,30 @@ h1 {
 h1:hover {
   border-bottom: 2px solid rgb(3, 77, 3);
 }
+#zoom-in {
+  width: 100%;
+  height: 600px;
+  overflow: hidden;
+  margin-top: 75px;
+}
 /*set style for main image*/
 #main-image {
   width: 100%;
-  height: 800px;
-  background-image: url("/assets/images/loughallen2.jpg") no-repeat center center;
+  height: 600px;
+  background-image: url("/assets/images/loughallen.jpg");
+
+  animation-name: main-zoom;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes main-zoom {
+  from {
+    transform: scale(1);
+  }
+  to{
+    transform: scale(1.1);
+  }
 }
 /*style h2 element*/
 h2 {
