--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,17 +4,20 @@
   margin: 0;
   border: none;
 }
+
 /*set style of body*/
 body {
 	font-family: 'palatino linotype', Verdana, sans-serif;
 	background-color: whitesmoke;
   color: rgb(3, 77, 3);
 }
+
 /*set nav to float right*/
 nav {
   float: right;
 }
-/*set nav list items to float left and style. Styling based on Love Running project*/
+
+/*set nav list items to float left, from W3Schools. Styling based on Love Running project*/
 nav li {
   float: left;
   font-size: 1.1rem;
@@ -23,10 +26,12 @@ nav li {
   margin-right: 20px;
   line-height: 75px;
 }
+
 /*show line under link when mouse or cursor moves over it, based on Love Running project*/
 nav a:hover {
   border-bottom: 2px solid gold;
 }
+
 /*Set size of header*/
 header {
   height: 5vw;
@@ -34,12 +39,14 @@ header {
   background-color: rgb(3, 77, 3);
   z-index: 3;
  }
-/*fix header to top of document*/
+
+ /*fix header to top of document*/
 .fixed-top {
   position: fixed;
   top: 0;
   left: 0;
 }
+
 /*set style of h1 element, spacing, size and height based on Love Running project styling*/
 h1 {
   color: gold;
@@ -47,11 +54,14 @@ h1 {
   letter-spacing: 2px;
   font-size: 300%;
   line-height: 75px;
+  margin-left: 30px;
 }
-/*show line under link when mouse or cursor moves over it, based on Love Running project*/
+
+/*show line under h1 when mouse or cursor moves over it, based on Love Running project*/
 h1:hover {
   border-bottom: 2px solid gold;
 }
+
 /*set main image, based on hero image from Love Running*/
 #zoom-in {
   width: 100%;
@@ -60,13 +70,14 @@ h1:hover {
   margin-top: 75px;
   z-index: 1;
 }
+
 /*set style for main image*/
 #main-image {
   width: 100%;
   height: 800px;
-  background-image: url("/assets/images/sliabhaniarainn.jpg");
+  background-image: url("/assets/images/loughallen.jpg");
   
-  /*animate main image when page loads, as per Love Running project*/
+/*animate main image when page loads, as per Love Running project*/
   animation-name: main-zoom;
   animation-duration: 5s;
   animation-fill-mode: forwards;
@@ -80,19 +91,24 @@ h1:hover {
     transform: scale(1.1);
   }
 }
+
 /*style h2 element*/
 h2 {
   background-color: rgb(3, 77, 3);
   color: whitesmoke;
 }
+
 /*create space above h2 to not be behind fixed header when link clicked*/
 #spacer {
-  margin-top: 5vh;
+  margin-top: 6vh;
 }
+
 /*style h3 element*/
 h3 {
   color: rgb(3, 77, 3);
+  margin: 1rem;
 }
+
 /*style links on document*/
 a {
   color: gold;
@@ -100,31 +116,41 @@ a {
   font-size: 1rem;
   margin: 1rem;
 }
+
 /*float content to the left of page, width prevents overlapping*/
 .float-left {
   width: 49%;
   float: left;
 }
+
 /*float content to right of page, width prevents overlapping*/
 .float-right {
   width: 49%;
   float: right;
 }
+
 /*style paragraphs*/
 p {
   color: rgb(3, 77, 3);
   font-size: 1.15rem;
+  margin: 1rem;
 }
+
 /*set organised list to match style of rest of document*/
 ol {
   color: rgb(3, 77, 3);
   border: solid 2px rgb(3, 77, 3);
+  margin: 1rem;
+  padding: 1rem;
 }
+
 /*set unorganised list to match style of rest of document*/
 ul{
   color: rgb(3, 77, 3);
   list-style-type:none;
+  margin: 1rem;
 }
+
 /*set border and style rules for images*/
 article img {
   border: 2px solid rgb(3, 77, 3);
@@ -134,20 +160,43 @@ article img {
   margin-right: auto;
   margin-top: 5px;
  }
-/*set style of fieldset*/
+
+ /*set style of fieldset, styled after Coder Coffehouse project*/
  fieldset {
 	border: none;
 	margin-top: 10px;
   color: rgb(3, 77, 3);
 }
-/*style legend*/
+
+/*style legend, styled after Coder Coffehouse project*/
 legend {
 	font-size: large;
 	font-weight: 600;
 	margin: 20px 0 10px 0;
 }
 
-/*style submit button*/
+/*style text input box, styled after Coder Coffehouse project*/
+input[type=text] {
+	background-color: whitesmoke;
+	color: rgb(3, 77, 3);
+	border: 1px solid rgb(3, 77, 3);
+}
+
+/*style email input box, styled after Coder Coffehouse project*/
+input[type=email] {
+	background-color: whitesmoke;
+	color: rgb(3, 77, 3);
+	border: 1px solid rgb(3, 77, 3);
+}
+
+/*style textarea box, styled after Coder Coffehouse project*/
+textarea {
+	background-color: whitesmoke;
+	color: rgb(3, 77, 3);
+	border: 1px solid rgb(3, 77, 3);
+}
+
+/*style submit button, styled after Coder Coffehouse project*/
 input[type=submit] {
 	margin-top: 10px;
 	margin-left: 1rem;
@@ -157,7 +206,8 @@ input[type=submit] {
 	border: 1px solid rgb(3, 77, 3);
 	border-radius: 5px;
 }
-/*style reset button*/
+
+/*style reset button, styled after Coder Coffehouse project*/
 input[type=reset] {
 	margin-top: 10px;
 	margin-left: 1rem;
@@ -167,7 +217,8 @@ input[type=reset] {
 	border: 1px solid rgb(3, 77, 3);
 	border-radius: 5px;
 }
-/*set rules for form*/	
+
+/*set rules for form, styled after Coder Coffehouse project*/	
 form {
 	width: 75vw;
 	padding: 0;
@@ -175,7 +226,8 @@ form {
 	margin-bottom: 5vw;
 	background-color: whitesmoke;
 }
-/*style footer to same as rest of page*/
+
+/*style footer to same as header*/
 footer {
 	background-color: rgb(3, 77, 3);
 	padding: 1em;
@@ -184,12 +236,14 @@ footer {
   height: 3vh;
   color: gold;
 }
+
 /*fix footer to bottom of page*/
 .fixed-bottom {
   position: fixed;
   bottom: 0;
   right: 0;
 }
+
 /*show line under link when mouse or cursor moves over it, based on Love Running project*/
 footer a:hover {
   border-bottom: 1px solid gold;
