--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,42 +93,71 @@ h1:hover {
 }
 
 /*style about us section, inspired by Love Running project*/
+#welcome {
+  text-align: center;
+  margin: 2rem 0;
+  background-color: whitesmoke;
+  color:rgb(3, 77, 3);
+}
+
 #about-us {
-  height: 100vh;
+  height: 600px;
 }
 
 #left-most {
   width: 33%;
   float: left;
-  padding-top: 3rem;
+  padding-top: 30px;
 }
 
 #right-most {
   width: 33%;
   float: right;
-  padding-top: 3rem;
+  padding-top: 30px;
 }
 
 #centremost {
   width: 33%;
   margin: 0 auto;
-  background-color: yellow;
 }
 
 .left-most-heading {
   width: 60%;
   float: right;
-  line-height: 2rem;
+  line-height: 20px;
   clear: both;
-  margin-bottom: 5rem;
+  margin-bottom: 50px;
 }
 
 .right-most-heading {
   width: 60%;
   float: left;
-  line-height: 2rem;
+  line-height: 20px;
   clear: both;
-  margin-bottom: 5rem;
+  margin-bottom: 50px;
+}
+
+.right-most-heading h2 {
+  text-align: right;
+}
+
+.right-most-heading p {
+  text-align: right;
+}
+
+#circle-maker {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: rgb(3, 77, 3);
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-background {
+  background: url("/assets/images/waterfall2.jpg");
 }
 
 /*style h2 element*/
