--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,10 @@ h1:hover {
   width: 100%;
   height: 100vh;
   background-image: url("/assets/images/loughallen.jpg");
+  display:flex;
+  justify-content: center;
+  align-content: center;
+  background-repeat: no-repeat;
   
 /*animate main image when page loads, as per Love Running project*/
   animation-name: main-zoom;
@@ -398,25 +402,36 @@ footer a:hover {
 /*set media rsponse to screen size below 950px*/
 @media screen and (max-width: 950px) {
 	
-  nav li {
+  header {
+    height: 25vh;
+    padding: 0;
+    margin: 0;
+  }
+
+  nav {
     clear: left;
-    float: left;
-    margin-left: 10px;
+    float:inline-end;
+    margin-left: 30px;
     margin-bottom: 20px;
     line-height: 25px;
   }
 
-  header {
-    height: 20vh;
+  nav li {
+    float: left;
+    font-size: 1rem;
+    letter-spacing: 0;
+    list-style-type: none;
+    margin: 0;
+    line-height: 25px;
   }
 
   h1 {
-    color: gold;
-    float: left;
+    float:inline-start;
+    text-align: center;
     letter-spacing: 1px;
     font-size: 200%;
-    line-height:75px;
-    margin-left: 10px;
+    padding: 0;
+    margin: 0;
   }
 
   #about-us {
